added tailwind extension

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Panda Fashion Brand :: Home Page</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1 class="text-4xl"> Be tha panda of the winter</h1>
+    </header>
     <main></main>
     <footer></footer>
 </body>
