--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
             </div>
           </div>
           <!-- jacket 3 -->
-          <div class="font-roboto space-y-3 shadow-2xl py-7 px-5 rounded-3xl space-y-3">
+          <div
+            class="font-roboto space-y-3 shadow-2xl py-7 px-5 rounded-3xl space-y-3"
+          >
             <div class="font-roboto space-y-3">
               <div class="bg-[#F1F1F1] rounded-3xl p-14">
                 <img
@@ -214,123 +216,144 @@
       </section>
       <!-- Man jacket section  -->
       <!-- Man jacket container  -->
-      <div>
-        <h3 class="font-bebas text-5xl">Man Jacket</h3>
-        <!-- card container  -->
-        <div class="flex gap-8">
-          <!-- card 1 -->
-          <div class="font-roboto shadow-2xl py-10 px-5 rounded-3xl space-y-3">
-            <div class="bg-[#F1F1F1] rounded-3xl p-10">
-              <img
-                src="./Resources/images/jacket-4.png"
-                alt="A yellow winter jacket for man"
-              />
-            </div>
-            <h4 class="font-bold text-2xl">Snowboard Jacket Mens</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam,
-              omnis.
-            </p>
-            <div class="flex justify-between">
-              <p class="text-[#FABE4C] text-4xl font-black">$399</p>
+      <section class="mt-20">
+        <div>
+          <h3 class="font-bebas text-5xl">Man Jacket</h3>
+          <!-- card container  -->
+          <div class="flex flex-col gap-8 lg:flex-row">
+            <!-- card 1 -->
+            <div
+              class="font-roboto shadow-2xl py-10 px-5 rounded-3xl space-y-3"
+            >
+              <div class="bg-[#F1F1F1] rounded-3xl p-10">
+                <img
+                  src="./Resources/images/jacket-4.png"
+                  alt="A yellow winter jacket for man"
+                />
+              </div>
+              <h4 class="font-bold text-2xl">Snowboard Jacket Mens</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam,
+                omnis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FABE4C] text-4xl font-black">$399</p>
 
-              <button
-                class="bg-green-600 py-4 px-9 rounded-xl text-white font-medium flex gap-3"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="white"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="size-6"
+                <button
+                  class="bg-green-600 py-4 px-9 rounded-xl text-white font-medium flex gap-3"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
-                  />
-                </svg>
-                Buy Now
-              </button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="white"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                    />
+                  </svg>
+                  Buy Now
+                </button>
+              </div>
             </div>
-          </div>
-          <!-- card 2 -->
-          <div class="font-roboto shadow-2xl py-10 px-5 rounded-3xl space-y-3">
-            <div class="bg-[#F1F1F1] rounded-3xl p-10">
-              <img
-                src="./Resources/images/jacket-5.png"
-                alt="A yellow winter jacket for man"
-              />
-            </div>
-            <h4 class="font-bold text-2xl">Snowboard Jacket Mens</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam,
-              omnis.
-            </p>
-            <div class="flex justify-between">
-              <p class="text-[#FABE4C] text-4xl font-black">$399</p>
+            <!-- card 2 -->
+            <div
+              class="font-roboto shadow-2xl py-10 px-5 rounded-3xl space-y-3"
+            >
+              <div class="bg-[#F1F1F1] rounded-3xl p-10">
+                <img
+                  src="./Resources/images/jacket-5.png"
+                  alt="A yellow winter jacket for man"
+                />
+              </div>
+              <h4 class="font-bold text-2xl">Snowboard Jacket Mens</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam,
+                omnis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FABE4C] text-4xl font-black">$399</p>
 
-              <button
-                class="bg-green-600 py-4 px-9 rounded-xl text-white font-medium flex gap-3"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="white"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="size-6"
+                <button
+                  class="bg-green-600 py-4 px-9 rounded-xl text-white font-medium flex gap-3"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
-                  />
-                </svg>
-                Buy Now
-              </button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="white"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                    />
+                  </svg>
+                  Buy Now
+                </button>
+              </div>
             </div>
-          </div>
-          <!-- card 3 -->
-          <div class="font-roboto shadow-2xl py-10 px-5 rounded-3xl space-y-3">
-            <div class="bg-[#F1F1F1] rounded-3xl p-10">
-              <img
-                src="./Resources/images/jacket-6.png"
-                alt="A yellow winter jacket for man"
-              />
-            </div>
-            <h4 class="font-bold text-2xl">Snowboard Jacket Mens</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam,
-              omnis.
-            </p>
-            <div class="flex justify-between">
-              <p class="text-[#FABE4C] text-4xl font-black">$399</p>
+            <!-- card 3 -->
+            <div
+              class="font-roboto shadow-2xl py-10 px-5 rounded-3xl space-y-3"
+            >
+              <div class="bg-[#F1F1F1] rounded-3xl p-10">
+                <img
+                  src="./Resources/images/jacket-6.png"
+                  alt="A yellow winter jacket for man"
+                />
+              </div>
+              <h4 class="font-bold text-2xl">Snowboard Jacket Mens</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam,
+                omnis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FABE4C] text-4xl font-black">$399</p>
 
-              <button
-                class="bg-green-600 py-4 px-9 rounded-xl text-white font-medium flex gap-3"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="white"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="size-6"
+                <button
+                  class="bg-green-600 py-4 px-9 rounded-xl text-white font-medium flex gap-3"
                 >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
-                  />
-                </svg>
-                Buy Now
-              </button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="white"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                    />
+                  </svg>
+                  Buy Now
+                </button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- information section  -->
+       <section>
+        <!-- text section  -->
+        <div>
+          <div>
+            
+          </div>
+          <div></div>
+          <div></div>
+        </div>
+        <!-- img section -->
+        <div> <img src="./Resources/images/shopping.png" alt="a vector image of people shopping"></div>
+       </section>
     </main>
     <footer></footer>
   </body>
