added shopping section

--- a/index.html
+++ b/index.html
@@ -346,7 +346,12 @@
         <!-- text section  -->
         <div>
           <div>
+            <div class="w-20"><img src="./Resources/icons/house.png " alt="a house logo" ></div>
             
+            <div>
+              <h4 >Find the Perfect Fit</h4>
+              <p>Everbody is differen, which is why we offer styles for everybody</p>
+            </div>
           </div>
           <div></div>
           <div></div>
